force-app/main/default/objects/Outbound_Transaction_Line__c/Outbound_Transaction_Line__c.object-meta.xml
<CustomObject>
    <label>Outbound Transaction Line</label>
    <nameField>
        <displayFormat>OTL-{0000}</displayFormat>
        <label>Outbound Transaction Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Transaction Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 