force-app/main/default/objects/Outbound_Transaction_Line__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 