force-app/main/default/objects/Outbound_Transaction_Line__c/fields/Outbound_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Transaction__c</fullName>
    <label>Outbound Transaction</label>
    <referenceTo>Outbound_Transaction__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>Outbound_Transaction_Lines</relationshipName>
    <type>MasterDetail</type>
</CustomField> 